Fix building without XF86VMODE gamma

Based on patch from Wouter Bolsterlee.
https://bugzilla.gnome.org/show_bug.cgi?id=620747